Sua mensagem de commit

--- a/templates/404.html
+++ b/templates/404.html
@@ -62,7 +62,7 @@
           </a>
           <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-              <a class="collapse-item" href="{% url 'password_reset' %}">Esqueceu a senha?</a>
+              <a  class="collapse-item" href="{% url 'redefinir_senha' %}">Esqueceu a senha?</a>
             </div>
           </div>
         </li>
