--- a/templates/listar_produtos.html
+++ b/templates/listar_produtos.html
@@ -11,15 +11,15 @@
     <title>Admin Produtos</title>
 
     <!-- Custom fonts for this template-->
-    <link rel="stylesheet" href="{% static 'vendor/fontawesome-free/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static '/vendor/fontawesome-free/css/all.min.css' %}">
 
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+    <link href="{% static '/css/sb-admin-2.min.css' %}" rel="stylesheet">
 
     <!-- DataTables CSS -->
-    <link href="{% static 'vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
+    <link href="{% static '/vendor/datatables/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 
   </head>
   <body id="page-top">
@@ -55,7 +55,7 @@
           </a>
           <div id="collapseProdutos" class="collapse" aria-labelledby="headingProdutos" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-              <a class="collapse-item" href="cadastrar/">Novo Produto</a>
+              <a class="collapse-item" href="/cadastrar/">Adicionar Item</a>
             </div>
           </div>
         </li>
@@ -66,7 +66,7 @@
           </a>
           <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-              <a  class="collapse-item" href="{% url 'password_reset' %}">Esqueceu a senha?</a>
+              <a  class="collapse-item" href="{% url 'redefinir_senha' %}">Esqueceu a senha?</a>
             </div>
           </div>
         </li>
@@ -110,7 +110,14 @@
                   <span class="mr-2 d-none d-lg-inline text-gray-900 small">{{ user.username }}</span>
                   <img class="img-profile rounded-circle" src="{% static 'img/undraw_profile.svg' %}">
                 </a>
+                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+                  <a class="dropdown-item" href="{% url 'logout' %}">
+                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                    Sair
+                  </a>
+                </div>
               </li>
+              
             </ul>
           </nav>
           <!-- End of Topbar -->
@@ -151,7 +158,9 @@
                       {% endfor %}
                     </tbody>
                   </table>
-                  <button type="button" class="btn btn-dark" style="color: white; text-decoration: none;" onclick="window.location.href='/cadastrar/'">Novo Produto</button>
+                  <button type="button" class="btn btn-dark" style="color: white; text-decoration: none;" onclick="window.location.href='/cadastrar/'">Adicionar Produto <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                    <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
+                  </svg></button>
                 </div>
               </div>
             </div>
@@ -183,18 +192,18 @@
     </a>
 
     <!-- Bootstrap core JavaScript-->
-    <script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static '/vendor/jquery/jquery.min.js' %}"></script>
+    <script src="{% static '/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js' %}"></script>
+    <script src="{% static '/vendor/jquery-easing/jquery.easing.min.js' %}"></script>
 
     <!-- Custom scripts for all pages-->
     <script src="{% static 'js/sb-admin-2.min.js' %}"></script>
 
     <!-- DataTables JavaScript -->
-    <script src="{% static 'vendor/datatables/jquery.dataTables.min.js' %}"></script>
-    <script src="{% static 'vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
+    <script src="{% static '/vendor/datatables/jquery.dataTables.min.js' %}"></script>
+    <script src="{% static '/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
 
     <!-- Page level custom scripts -->
     <script>
