--- a/templates/login.html
+++ b/templates/login.html
@@ -90,6 +90,9 @@
             <p>Não tem conta?</p>
             <button type="button" class="btn btn-dark w-100" style="color: white;" onclick="window.location.href='/registrar/'">Cadastrar-se</button>
           </div>
+          <div class="mt-4">
+            <a href="{% url 'confirmar_email' %}"><p>Esqueceu a senha?</p></a>
+          </div>
         </div>
       </div>
     </div>
